# Cocos2dChess

./: .gitignore  CMakeLists.txt  ChessboardScene.cpp  ChessboardScene.h  Makefile  README.md
Classes/: AppDelegate.cpp  AppDelegate.h  AppStateMachine.cpp  AppStateMachine.h  Bitboard.cpp  Bitboard.h  Chess.h  ChessAppStateMachine.cpp  ChessAppStateMachine.h  ChessEngine.cpp  ChessEngine.h  ChessboardScene.cpp  ChessboardScene.h  WelcomeScene.cpp  WelcomeScene.h
mac-build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ChessTests_postBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
mac-build/Chess.xcodeproj/: project.pbxproj
mac-build/engine/cocos/core/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
mac-build/engine/cocos/core/cocos2d_libs.xcodeproj/: project.pbxproj
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/mac/: Info.plist
test/: BitboardTests.cpp  ChessTestsMain.cpp  Test.h
utils/: BitboardPrint.cpp
